# sentinel-proxy

./: .gitignore  .gitlab-ci.yml  CHANGELOG.md  CMakeLists.txt  Makefile  Makefile.am  README.md  bootstrap  common.h  con_peer_list.c  configure.ac  const.h  default.h  device_token.c  device_token.h  example.cfg  log.c  log.h  main.c  mqtt.c  mqtt.hpp  proxy.c  proxy.cpp  proxy_conf.c  proxy_conf.h  proxy_mqtt.c  proxy_mqtt.h  proxy_zmq.c  proxy_zmq.h  proxy_zmq_msg.c  proxy_zmq_msg.h  pub.cpp  sentinel_device_token.c  sentinel_proxy.c  utils.h  zmq.c
.gitlab-ci/: Dockerfile  release.sh
dev/: README.md  dev_proxy.py  run_dev_proxy_for_minipots.sh
device-token/: Makefile.am  device_token.c  libsentinel-device-token.pc.in  libsentinel-device-token.version  sentinel_device_token.c
include/: device_token.h
m4/: ax_valgrind_check.m4
proxy/: Makefile.am  common.h  con_peer_list.c  con_peer_list.h  last_msg_list.c  last_msg_list.h  log.c  log.h  proxy_conf.c  proxy_conf.h  proxy_mqtt.c  proxy_mqtt.h  proxy_zmq.c  proxy_zmq.h  sentinel_proxy.c
tests/: Makefile.am  data_collector.py
tests/manual/: Makefile.am  README.md  broker-key.pem  broker-localhost-cert-selfsigned.pem  broker-mosquitto.lan-cert-ca1.pem  broker-mosquitto.lan-cert-ca2.pem  broker.conf  ca1-cert.pem  ca2-cert.pem  input_generator.py  mosquitto.conf  output_capture.py  proxy-cert-ca2.pem  proxy-cert-selfsigned.pem  proxy-key.pem  proxy.cfg  run_input_generator.sh  run_mosquitto.sh  run_out_capture.sh  run_proxy.sh  smash-cert-ca1.pem  smash-cert-ca2.pem  smash-key.pem
tests/manual/ca_conf/: ca1.cnf  ca2.cnf
tests/unit/: Makefile.am  con_peer.c  con_peer_list.c  device_token.c  last_msg.c  last_msg_list.c  proxy_conf.c  proxy_mqtt.c  proxy_zmq.c  test_config.cfg  unittests.c
tests/unit/data/: test_cert.pem
